# 2020_backup

src/common/receive_gps/: CMakeLists.txt
src/common/receive_gps/launch/: receive_gps.launch
src/common/receive_gps/receive_gps_nodegen/: receive_gpsNodegen.cpp
src/common/receive_gps/receive_gps_nodegen/src/: receive_gps.cpp  receive_gps.h
src/common/unavlib/: CMakeLists.txt  README.md  package.xml
src/common/unavlib/include/unavlib/: convt.h  others.h  utm.h
src/common/unavlib/src/unavlib/: convt.cpp  others.cpp
src/control/autonomous_vehicle/: CMakeLists.txt  can_bus.bag  package.xml
src/control/autonomous_vehicle/ck_CanNodegen/: can_nodegen.cpp
src/control/autonomous_vehicle/ck_CanNodegen/launch/: vehicle_can.launch
src/control/autonomous_vehicle/ck_CanNodegen/src/: CanClass.h  CanNodegen.cpp
src/control/autonomous_vehicle/msg/: CanFrame.msg  CommandMsg.msg
src/control/autonomous_vehicle/srv/: ControlStatus.srv
src/control/path_following/: CMakeLists.txt  README.md  package.xml
src/control/path_following/path_following_nodegen/: path_followingNodegen.cpp
src/control/path_following/path_following_nodegen/src/: path_following.cpp  path_following.h
src/drivers/pcan/: CMakeLists.txt  package.xml
src/drivers/pcan/include/pcan/: CanFrame.h
src/drivers/pcan/src/: pcan_pub_write.cpp  pcan_read.cpp
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: jslocalization.yaml
src/localization/extractfeature/: main.cpp
src/localization/extractfeature/src/: extractfeature (copy).cpp.planarbackup_0926  extractfeature.cpp  extractfeature.cpp.backup.0927  extractfeature.h  extractfeature_backup1011.cpp  extractfeature_backup1022.cpp  extractfeature_fordebug.cpp
src/localization/launch/: jslocalization.launch
src/localization/mcl/: main.cpp
src/localization/mcl/src/: mcl .cpp.backup_1015  mcl.cpp  mcl.h  mcl_backup_1020.cpp
src/localization/nodegen/: main.cpp
src/localization/nodegen/src/: conversions.h  nodegen.cpp  nodegen.h
src/localization/rviz/: fortest.rviz  jslocalization.rviz  planar_local.rviz  pole_debug.rviz  pole_local.rviz  tracking.rviz
src/map_generation/: CMakeLists.txt  a  package.xml
src/map_generation/HD_MAP/Daegu/: NGII_대구자율주행특화지역_수성의료지구내부도로.xlsx
src/map_generation/HD_MAP/Daegu/HDMap/: A1_LANE.shp  A2_STOP.dbf  A3_LINK.dbf  A3_LINK.shp  A3_LINK.shx  B1_SIGNAL_POINT.shp  B2_SURFSIGN_LINE.shx  B2_SURFSIGN_PLANE.shp  B2_SURFSIGN_PLANE.shx  B3_POST_POINT.dbf  C1_NODE.dbf  C1_NODE.shp
src/map_generation/HD_MAP/Daegu/HDMap_UTM52N_타원체고/: A1_LANE.shx  A2_STOP.shp  A2_STOP.shx  B1_SIGNAL_POINT.shx  B1_SIGN_POINT.shp  C1_NODE.shx  (+6 more)
src/map_generation/HD_MAP/KIAPI_HD_MAP_bumyong/: LANE.dbf  LANE.shp  LANE.shx  LINK.dbf  LINK.shp  LINK.shx  NODE.dbf  NODE.shp  NODE.shx
src/map_generation/config/: params_Daegu.yaml  params_KAIST.yaml  params_PG.yaml
src/map_generation/include/map_generation/: map_generation.h
src/map_generation/launch/: map_generation.launch
src/map_generation/rviz/: load_map.rviz
src/map_generation/src/: map_generation.cpp  map_generation_node.cpp
src/map_generation/srv/: hd_map_service.srv
src/msgs/control_msgs/: CMakeLists.txt  package.xml
src/msgs/control_msgs/msg/: VehicleState.msg  Vehicle_cmd.msg
src/msgs/control_msgs/srv/: Vehicle_status.srv
src/msgs/keti_msgs/: CMakeLists.txt  package.xml
src/msgs/keti_msgs/msg/: ACC.msg  EPS.msg  ImageObj.msg  ImageRect.msg  JNode.msg  JNode2.msg  JNodeArray.msg  Lane.msg  MoConf.msg  MoVal.msg  Node.msg  ObstacleInfo.msg  Path.msg  Point.msg  StopLine.msg  Waypoint.msg  dtlane.msg  dtlaneArray.msg
src/msgs/localization_msgs/: CMakeLists.txt  package.xml
src/msgs/localization_msgs/msg/: FeatureBoxes.msg  FeatureTrackBox.msg  FeatureTrackBoxes.msg  ObjTrackBox.msg  ObjTrackBoxes.msg  PlanarTrackBox.msg  PlanarTrackBoxes.msg  PoleTrackBox.msg  PoleTrackBoxes.msg  lidar.msg  mcl.msg  node.msg  nodes.msg  object.msg  objects.msg  planar.msg  planars.msg  pole.msg  poles.msg
src/msgs/mission_msgs/: CMakeLists.txt  package.xml
src/msgs/mission_msgs/msg/: global2mission.msg  global2mission_list.msg  mission.msg  mission_list.msg
src/msgs/obj_msgs/: CMakeLists.txt  package.xml
src/msgs/obj_msgs/msg/: Ego.msg  GridRoi.msg  Obj.msg  ObjList.msg  ObjTrackBox.msg  ObjTrackBoxes.msg
src/msgs/path_msgs/: CMakeLists.txt  package.xml
src/msgs/path_msgs/msg/: Bezier.msg  Cost.msg  Lane.msg  Link.msg  Map.msg  Node.msg  Route.msg  Trajectory.msg  Waypoint.msg
src/perception/multiobj_tracker/: CMakeLists.txt  package.xml
src/perception/multiobj_tracker/MOT_HDMAP/: LANE_minho.dbf  LANE_minho.shp  LANE_minho.shx  LANE_minho_V2.dbf  LANE_minho_V2.shp  LANE_minho_V2.shx  LANE_minho_V3.dbf  LANE_minho_V3.shp  LANE_minho_V3.shx  LINK_minho.dbf  LINK_minho.shp  LINK_minho.shx  LINK_minho_V2.dbf  LINK_minho_V2.shp  LINK_minho_V2.shx  LINK_minho_V3.dbf  LINK_minho_V3.shp  LINK_minho_V3.shx  Minho_link_V1.dbf  Minho_link_V1.shp  Minho_link_V1.shx
src/perception/multiobj_tracker/config/: mot.yaml
src/perception/multiobj_tracker/launch/: multiobj_tracker.launch
src/perception/multiobj_tracker/obj_classifier_lidar/: obj_classifier.cpp
src/perception/multiobj_tracker/obj_detector_lidar/: obj_detector.cpp
src/perception/multiobj_tracker/obj_gridROI_generator/: grid_roi_generation.cpp
src/perception/multiobj_tracker/rviz/: multiobj_tracker.rviz
src/planning/dynamic_planning/: CMakeLists.txt  package.xml
src/planning/dynamic_planning/launch/: dynamic_planning.launch
src/planning/dynamic_planning/src/: dynamic_planning.cpp  dynamic_planning_node.cpp
src/planning/global_planning/: CMakeLists.txt  package.xml
src/planning/global_planning/config/: params.yaml
src/planning/global_planning/global_planning_nodegen/: global_planningNodegen.cpp
src/planning/global_planning/launch/: global_planning.launch
src/planning/global_planning/rviz/: load_map.rviz
src/v2x/0_v2x_ros/: CMakeLists.txt  package.xml
src/v2x/0_v2x_ros/config/: object_list.yaml  yaml_mission_list.yaml
src/v2x/0_v2x_ros/launch/: mission.launch  traffic.launch
(+535 files in other folders)
