<?xml version="1.0"?>
<package format="2">
  <name>jslocalization</name>
  <version>0.1.0</version>
  <description> JS_localization package</description>
  <maintainer email="jseulgi@kaist.ac.kr">Seulgi Jeon </maintainer>

  <license>Kaist</license>
  <author >Seulgi Jeon</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>control_msgs</build_depend>
  <exec_depend>control_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>

  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>

  <build_depend>unavlib</build_depend>
  <exec_depend>unavlib</exec_depend>

  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>

  <build_depend>tf2_eigen</build_depend>
  <exec_depend>tf2_eigen</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>pcl_omp_registration</build_depend>
  <exec_depend>pcl_omp_registration</exec_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all-dev</exec_depend>

  <build_depend>localization_msgs</build_depend>
  <exec_depend>localization_msgs</exec_depend>

  <export>
  </export>
</package>
