<?xml version="1.0"?>
<package>
  <name>pcan</name>
  <version>0.0.1</version>
  <description>The pcan package</description>

  <maintainer email="shim36145@gmail.com">youngbo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>

</package>
