<?xml version="1.0"?>
<package format="2">
  <name>multiobj_tracker</name>
  <version>0.1.0</version>
  <description>The multiobj_tracker package</description>
  <maintainer email="minho.oh@kaist.ac.kr">Minho Oh</maintainer>
  <license>KAIST_URL</license>
  <author >Minho Oh</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <exec_depend>pcl_ros</exec_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_generation</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>
    
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>visualization_msgs</build_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <depend>obj_msgs</depend>

  <export>
  </export>
</package>
