<?xml version="1.0"?>
<package format="2">
  <name>global_planning</name>
  <version>0.0.0</version>
  <description>The global_planning package</description>

  <maintainer email="jseulgi@kaist.ac.kr">sg</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>path_msgs</build_depend>
  <build_depend>obj_msgs</build_depend>
  <build_depend>mission_msgs</build_depend>
  
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>path_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>obj_msgs</build_export_depend>
  <build_export_depend>mission_msgs</build_export_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>path_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>obj_msgs</exec_depend>
  <exec_depend>mission_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
